--- a/docs/index.css
+++ b/docs/index.css
@@ -4,7 +4,7 @@
 	padding: 0;
 }
 html,body {
-	height: 100%;
+	// height: 100%;
 }
 body {
 	font-size: 14px;
@@ -13,7 +13,7 @@ body {
 }
 .main-page {
 	position: relative;
-	height: 100%;
+	// height: 100%;
 }
 canvas {
 }
@@ -21,7 +21,7 @@ video {
 	z-index: -1;
 	position: absolute;
 	width: 100%;
-    height: 100%;
+    // height: 100%;
     top: 0;
     left: 0;
 }
