--- a/docs/index.css
+++ b/docs/index.css
@@ -21,8 +21,8 @@ canvas {
 video {
 	z-index: -1;
 	position: absolute;
-	width: 100%;
-    // height: 100%;
+	// width: 100%;
+    height: 100%;
     top: 0;
     left: 0;
 }
